# football-calendar

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  constraints.txt  mypy.ini  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
cdk/: app.py  cdk.json  config.py
cdk/lambda/: .gitignore  code.py
footcal/: __init__.py  parsers.py
footcal/cli/: football_calendar.py
footcal/tests/: test_init.py  test_parsers.py
footcal/tests/fixtures/: espn_flu.html
prototypes/: flu.py  fluminense.ical  fluminense.ics  requirements.txt
