[metadata]
name = football-calendar
description = Create football ical files based on web fixtures content.
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
keywords = Football, Calendar, ical
author = Frederico Liporace
author_email = liporace@gmail.com
url = https://github.com/fredliporace/football-calendar
license = MIT

[options]
install_requires =
    requests
    beautifulsoup4
    pydantic
    icalendar
    Babel
python_requires = >=3.7

[options.extras_require]
dev =
    pylint
    pre-commit
    pytest
