[metadata]
name = football-calendar
description = Create football ical files based on web fixtures content.
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
keywords = Football, Calendar, ical
author = Frederico Liporace
author_email = liporace@gmail.com
url = https://github.com/fredliporace/football-calendar
license = MIT

[options]
install_requires =
    requests
    beautifulsoup4
    pydantic
    icalendar
    Babel
    # Not feasible, too large for lambda execution
    # requests-html
python_requires = >=3.9
packages = find:

[options.packages.find]
exclude =
    *tests*
    prototypes

[options.extras_require]
dev = pylint; pre-commit; pytest; types-pytz
cli = click
aws = aws-cdk-lib >= 2.129; constructs>=10.0.0,<11.0.0; awscli

[options.entry_points]
console_scripts =
    footcal = footcal.cli.football_calendar:footcal